--- a/source/SingleScope.Reporting.Logging/SingleScope.Reporting.Logging.csproj
+++ b/source/SingleScope.Reporting.Logging/SingleScope.Reporting.Logging.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0105</FileVersion>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1.0106</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
@@ -25,10 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SingleScope.Reporting\SingleScope.Reporting.csproj" />
+    <PackageReference Include="SingleScope.Reporting" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
