--- a/source/SingleScope.Reporting.Maui/SingleScope.Reporting.Maui.csproj
+++ b/source/SingleScope.Reporting.Maui/SingleScope.Reporting.Maui.csproj
@@ -15,8 +15,8 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2.0106</FileVersion>
+    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <FileVersion>1.0.3.0106</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
@@ -38,11 +38,7 @@
 
   <ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="SingleScope.Reporting" Version="1.0.2" />
 	</ItemGroup>
-
-
-  <ItemGroup>
-    <ProjectReference Include="..\SingleScope.Reporting\SingleScope.Reporting.csproj" />
-  </ItemGroup>
 
 </Project>
