--- a/source/SingleScope.Navigations.Maui/SingleScope.Navigations.Maui.csproj
+++ b/source/SingleScope.Navigations.Maui/SingleScope.Navigations.Maui.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst;net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net10.0-windows10.0.19041.0</TargetFrameworks>
 
 		<UseMaui>true</UseMaui>
@@ -16,7 +16,7 @@
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 
     <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0105</FileVersion>
+    <FileVersion>1.0.0.0106</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
@@ -37,10 +37,7 @@
 
   <ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="SingleScope.Navigations" Version="1.0.0" />
 	</ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SingleScope.Navigations\SingleScope.Navigations.csproj" />
-  </ItemGroup>
 
 </Project>
