--- a/source/SingleScope.Mvvm.Maui/SingleScope.Mvvm.Maui.csproj
+++ b/source/SingleScope.Mvvm.Maui/SingleScope.Mvvm.Maui.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst;net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
@@ -16,7 +16,7 @@
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 
     <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0105</FileVersion>
+    <FileVersion>1.0.0.0106</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
